--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </script>
 
   <div class="mobile-load-title-overlay" style="display: none">
-    <div class="mobile-load-title">Wants vs needs 2</div>
+    <div class="mobile-load-title">Wants vs Needs Part 1</div>
   </div>
 
   <div class="mobile-chrome-warning"></div>
